--- a/app/views/videogames/new.html.erb
+++ b/app/views/videogames/new.html.erb
@@ -1,2 +1,9 @@
 <h1>Videogames#new</h1>
 <p>Find me in app/views/videogames/new.html.erb</p>
+
+<%= simple_form_for @videogame, :url => search_path do |f| %>
+  <%= f.input :title %>
+  <%= f.input :summary %>
+  <%= f.input :image %>
+  <%= f.button :submit %>
+<% end %>
